# RDM-storage-s3compat

./: .gitignore  ADDON_ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  babel.cfg  pyproject.toml  requirements.txt  setup.py  test_entry_points.py  test_import_without_waterbutler.py  test_minimal.py  test_templates.py  test_updated_imports.py
.github/workflows/: integration-test.yml  quality.yml  test.yml
s3compat/: __init__.py
s3compat/locale/: messages.pot
s3compat/locale/en/LC_MESSAGES/: messages.po
s3compat/locale/ja/LC_MESSAGES/: messages.po
s3compat/osf_addon/: __init__.py  admin_integration.py  apps.py  models.py  provider.py  routes.py  serializer.py  utils.py  views.py
s3compat/osf_addon/migrations/: 0001_initial.py  0002_auto_20180301_0356.py  0003_nodesettings_folder_location.py  0004_rename_deleted_field.py
s3compat/osf_addon/tests/: factories.py  test_model.py  test_serializer.py  test_view.py  utils.py
s3compat/waterbutler_provider/: __init__.py  metadata.py  provider.py
tests/: __init__.py  test_admin_integration.py  test_package_import.py  utils.py
tests/integration/: __init__.py
tests/osf_addon/: __init__.py
tests/waterbutler_integration/: __init__.py  test_metadata_mixin.py  test_provider.py
tests/waterbutler_provider/: __init__.py
